--- a/static/css/auth.css
+++ b/static/css/auth.css
@@ -20,9 +20,10 @@ body {
     width: 380px;
     padding: 30px;
     border-radius: 12px;
-
     background: rgba(84, 84, 84, 0.13);
     border: 1px solid rgba(255, 255, 255, 0.15);
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -70,8 +71,8 @@ button {
 }
 
 button:hover {
-    transform: scale(1.1);
-    background-color: rgb(134, 132, 132);
+    transform: scale(1.01);
+    background-color: rgb(204, 204, 204);
 }
 
 
@@ -116,4 +117,36 @@ input:focus {
     from { opacity: 0; transform: translateY(5px); }
     to   { opacity: 1; transform: translateY(0); }
 }
+
+a {
+    margin-top: 8px;
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+}
+
+.divider {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    margin: 20px 0;
+    color: #fff; 
+    font-weight: bold;
+}
+
+.divider::before,
+.divider::after {
+    content: "";
+    flex: 1;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.divider::before {
+    margin-right: 10px;
+}
+
+.divider::after {
+    margin-left: 10px;
+}
+
 
