--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -98,6 +98,7 @@
         #card_container_features,
         #card_container_workings {
             text-align: center;
+            cursor: pointer;
         }
 
 
