--- a/templates/forgetPassword.html
+++ b/templates/forgetPassword.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ENCIPHERA - Signup</title>
+    <title>ENCIPHERA - FORGET PASSSWORD</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
     <style>
         @font-face {
@@ -17,20 +17,22 @@
 
 <body>
     <div id="form-container">
-        <form id="signup" method="POST" action="/login">
+        <form id="signup" method="POST" action="/forgetPassword">
             <h2>LOGIN</h2>
 
             <label for="username">USERNAME</label>
             <input type="text" id="username" name="username" placeholder="Enter Username" required>
 
 
-            <label for="password">PASSWORD</label>
-            <input type="password" id="password" name="password" placeholder="Enter Password" required>
+            <div class="divider">
+                <span>OR</span>
+            </div>
 
 
-            <a id="forgetPassword" href="{{ url_for('forgetPassword')}}">
-                Forgot Password? Click here
-            </a>
+
+            <label for="email">E-MAIL</label>
+            <input type="email" id="email" name="email" placeholder="Enter E-MAIL" required>
+
 
             <button type="submit">Login</button>
         </form>
@@ -41,25 +43,10 @@
             {% endif %}
         </div>
 
-        <a href="{{ url_for('signup')}}">
-            Don't have an account? Create one
-        </a>
-
     </div>
     </div>
 
 
-
-    <!--SCRIPT-->
-    <script>
-        const form = document.getElementById('signup');
-        const password = document.getElementById('password');
-        const errorDiv = document.getElementById('errors');
-
-        form.addEventListener('submit', function (event) {
-        })
-
-    </script>
 </body>
 
 </html>
