--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
 
     <div id="content">
         <div id="logo">
-            <img src="{{ url_for('static', filename='images/logo.png') }}">
+            ENCIPHERA
         </div>
 
         <p>
