Finally pass word change is working

--- a/templates/verify_fpotp.html
+++ b/templates/verify_fpotp.html
@@ -27,6 +27,10 @@
             <input type="confirm_password" id="confirm_password" name="confirm_password" placeholder="Re Enter Password"
                 required>
 
+            <label for="otp">OTP</label>
+            <input type="otp" id="otp" name="otp" placeholder="Enter OTP" required>
+
+
             <button type="submit">SUBMIT</button>
         </form>
         <div id="errors" style="display:none; {% if error %}display:block;{% endif %}">
