--- a/templates/forgetPassword.html
+++ b/templates/forgetPassword.html
@@ -21,7 +21,7 @@
             <h2>LOGIN</h2>
 
             <label for="username">USERNAME</label>
-            <input type="text" id="username" name="username" placeholder="Enter Username" required>
+            <input type="text" id="username" name="username" placeholder="Enter Username" >
 
 
             <div class="divider">
@@ -31,7 +31,7 @@
 
 
             <label for="email">E-MAIL</label>
-            <input type="email" id="email" name="email" placeholder="Enter E-MAIL" required>
+            <input type="email" id="email" name="email" placeholder="Enter E-MAIL" >
 
 
             <button type="submit">Login</button>
