--- a/templates/file_manager.html
+++ b/templates/file_manager.html
@@ -181,6 +181,12 @@
                 <option value=".pdf">.pdf (PDF Document)</option>
                 <option value=".png">.png (Image)</option>
                 <option value=".zip">.zip (Archive)</option>
+                <option value=".mp3">.mp3 (Audio)</option>
+                <option value=".wav">.wav (Audio)</option>
+                <option value=".ogg">.ogg (Audio)</option>
+                <option value=".mp4">.mp4 (Video)</option>
+                <option value=".mkv">.mkv (Video)</option>
+                <option value=".webm">.webm (Video)</option>
             </select>
         </div>
 
